@@ -1,15 +1,0 @@
-<configure
-    xmlns:zope="http://namespaces.zope.org/zope"
-    xmlns:browser="http://namespaces.zope.org/browser"
-    xmlns:genericsetup="http://namespaces.zope.org/genericsetup">
-
-    <genericsetup:upgradeStep
-        source="0.2"
-        destination="1.1"
-        title="Update Action Letter FTI"
-        description="Add an add view expression for Plone 4."
-        profile="collective.megaphone:default"
-        handler="collective.megaphone.upgrades.to_1_1"
-        />
-
-</configure>
